--- a/templates/home.html
+++ b/templates/home.html
@@ -1,24 +1,23 @@
 {% extends 'base.html'%} {% block content %}
 <div class="row">
-
     <h3> Categories</h3>
-    <ul class="collapsible" data-collapsible="accordion">
-        {% for category in categories %}
-        <li>
-            <div class="collapsible-header">
-                <a href="" class="waves-effect waves-light btn btn_small">Del</a>
-                <a href="" class="waves-effect waves-light btn btn_small blue">Edit</a>
-                
-                <div class="">
-                    <strong>{{category.category_name}}</strong>
-                </div>
-            </div>
-        </li>
-        {% endfor %}
 
-    </ul>
-</div>
-<div class='row'>
-<a href="" class="waves-effect waves-light btn"><i class="material-icons right">playlist_add</i>Add Category</a>
+<div class="row">
+ {% for category in categories %}
+    <div class="col s12 m6 l4">
+      <div class="card">
+        <div class="card-image">
+          <img src="images/sample-1.jpg" width="300px" height="300px">
+          <span class="card-title"></strong></span>
+          <a href="{{url_for('recipes', category_id=category._id)}}" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+        </div>
+        <div class="card-content">
+          <p><strong>{{category.category_name}}</strong></p>
+        </div>
+      </div>
+    </div>
+    {% endfor %}   
+  </div>
+     
 </div>
 {% endblock %}
