--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -68,8 +68,11 @@
                 <a class="waves-effect waves-light btn"><i class="material-icons left">arrow_forward</i>add
                     ingredients</a>
             </div>
+            <!--Add ingredients section-->
             <div class="add_ingredients">
-                <h3>add ingredients:</h3>
+                <div class="row">
+                    <h3>add ingredients:</h3>
+                </div>
                 <div class="row">
                     <div class="input-field col s2 ">
                         <input placeholder="1" id="amount" name="amount" type="text" class="validate">
@@ -88,28 +91,66 @@
                         </select>
                         <label>Measurement</label>
                     </div>
-                    <div class="input-field col s7 ">
+                    <div class="input-field col s5 ">
                         <input placeholder="Ingredient" id="ingredient" name="ingredient" type="text" class="validate">
                         <label for="ingredient">Ingredient</label>
                     </div>
+                    <div>
+                        <a class="btn-floating btn-medium waves-effect waves-light red"><i
+                                class="material-icons">add</i></a>
+                    </div>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <div>
+                        <a class="waves-effect waves-light btn"><i class="material-icons left">arrow_forward</i>Proceed
+                            to Preparation Method</a>
+                    </div>
                 </div>
-                <a class="waves-effect waves-light btn-small "><i class="material-icons left">add_circle_outline</i>add
-                    ingredient</a>
             </div>
-    </div>
-    <br>
-    <br>
-    <a class="waves-effect waves-light btn"><i class="material-icons left">arrow_forward</i>Proceed to Preparation
-        Method</a>
-</div>
-</div>
-</div>
-<div class="add_method">
-    <div class="row">
+            <!--Add ingredients section-->
+            <div class="add_method">
+                <div class="row">
+                    <h3>add method:</h3>
+                </div>
+                <div class="row">
+                    <div class="input-field col s10 ">
+                        <input placeholder="Method" id="method" name="method" type="text" class="validate">
+                        <label for="method"></label>
+                    </div>
+                    <div>
+                        <a class="btn-floating btn-medium waves-effect waves-light red"><i
+                                class="material-icons">add</i></a>
+                    </div>
+                </div>
+                <br>
+                <br>
+                <div>
+                    <a class="waves-effect waves-light btn-small"><i class="material-icons left">insert_photo</i>Upload
+                        an image</a>
+                </div>
+                <br>
+                <br>
+                <div>
+                    <a class="waves-effect waves-light btn"><i class="material-icons left">arrow_forward</i>Review
+                        Recipe</a>
+                </div>
+            </div>
+            <!--Review Recipe section-->
+            <div class="review">
+                <div class="row">
+                    <h3>review recipe:</h3>
 
+                    <br>
+                    <br>
+                    <div>
+                        <button class="btn waves-effect waves-light" type="submit" name="action">Submit Recipe
+                            <i class="material-icons right">send</i>
+                        </button>
+                    </div>
+                </div>
+        </form>
     </div>
-</div>
-</form>
-</div>
 
-{% endblock %}
+    {% endblock %}
