--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -42,7 +42,7 @@
                     <label for="cook_time"></label>
                 </div>
                 <div class="input-field col s12 m6">
-                    <select id="category" name="category_name" class="icons ">
+                    <select id="rating" name="rating" class="icons ">
                         <option value="" disabled selected>Choose your Rating</option>
                         {% for rate in ratings %}
                         <option value="" data-icon="{{rate.r_image}}">{{rate.rated}}</option>
@@ -73,16 +73,16 @@
                 <div class="row">
                     <h3>add ingredients:</h3>
                 </div>
-                <div class="row">
+                <div id="adding-ingredients" class="row">
                     <div class="input-field col s2 ">
-                        <input placeholder="1" id="amount" name="amount" type="text" class="validate">
+                        <input placeholder="1" id="amount" name="amount" type="text" class="ingredients_add">
                         <label for="amount">Amount</label>
                     </div>
-                    <div class="input-field col s3">
+                    <div class="input-field col s3" class="ingredients_add">
                         <select>
                             <option value="" disabled selected></option>
                             <option value="1">cup</option>
-                            <option value="2">g</option>
+                            <option value="2"></option>g</option>
                             <option value="3">ml</option>
                             <option value="4">oz</option>
                             <option value="5">tbsp</option>
@@ -91,67 +91,70 @@
                         </select>
                         <label>Measurement</label>
                     </div>
-                    <div class="input-field col s5 ">
-                        <input placeholder="Ingredient" id="ingredient" name="ingredient" type="text" class="validate">
+                    <div class="input-field col s6 ">
+                        <input placeholder="Ingredient" id="ingredient" name="ingredient" type="text"
+                            class="ingredients_add">
                         <label for="ingredient">Ingredient</label>
                     </div>
-                    <div>
-                        <a class="btn-floating btn-medium waves-effect waves-light red"><i
-                                class="material-icons">add</i></a>
-                    </div>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <div>
-                        <a class="waves-effect waves-light btn"><i class="material-icons left">arrow_forward</i>Proceed
-                            to Preparation Method</a>
-                    </div>
-                </div>
-            </div>
-            <!--Add ingredients section-->
-            <div class="add_method">
-                <div class="row">
-                    <h3>add method:</h3>
-                </div>
-                <div class="row">
-                    <div class="input-field col s10 ">
-                        <input placeholder="Method" id="method" name="method" type="text" class="validate">
-                        <label for="method"></label>
-                    </div>
-                    <div>
-                        <a class="btn-floating btn-medium waves-effect waves-light red"><i
-                                class="material-icons">add</i></a>
-                    </div>
-                </div>
-                <br>
-                <br>
-                <div>
-                    <a class="waves-effect waves-light btn-small"><i class="material-icons left">add_a_photo</i>Upload
-                        an image</a>
-                </div>
-                <br>
-                <br>
-                <div>
-                    <a class="waves-effect waves-light btn"><i class="material-icons left">arrow_forward</i>Review
-                        Recipe</a>
-                </div>
-            </div>
-            <!--Review Recipe section-->
-            <div class="review">
-                <div class="row">
-                    <h3>review recipe:</h3>
 
-                    <br>
-                    <br>
                     <div>
-                        <button class="btn waves-effect waves-light" type="submit" name="action">Submit Recipe
-                            <i class="material-icons right">send</i>
-                        </button>
+                        <a id="add-ing" class="btn-floating btn-medium waves-effect waves-light red"><i
+                                class="material-icons">add</i></a>
                     </div>
                 </div>
+                <br>
+                <br>
+                <br>
+                <br>
+                <div>
+                    <a class="waves-effect waves-light btn"><i class="material-icons left">arrow_forward</i>Proceed
+                        to Preparation Method</a>
+                </div>
             </div>
-        </form>
     </div>
+    <!--Add Method section-->
+    <div class="add_method">
+        <div class="row">
+            <h3>add method:</h3>
+        </div>
+        <div class="row">
+            <div class="input-field col s10 ">
+                <input class="add-method" placeholder="Method" id="method" name="method" type="text" class="validate">
+                <label for="method"></label>
+            </div>
+            <div>
+                <a id='add-met' class="btn-floating btn-medium waves-effect waves-light red"><i
+                        class="material-icons">add</i></a>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div>
+            <a class="waves-effect waves-light btn-small"><i class="material-icons left">add_a_photo</i>Upload
+                an image</a>
+        </div>
+        <br>
+        <br>
+        <div>
+            <a class="waves-effect waves-light btn"><i class="material-icons left">arrow_forward</i>Review
+                Recipe</a>
+        </div>
+    </div>
+    <!--Review Recipe section-->
+    <div class="review">
+        <div class="row">
+            <h3>review recipe:</h3>
 
-    {% endblock %}
+            <br>
+            <br>
+            <div>
+                <button class="btn waves-effect waves-light" type="submit" name="action">Submit Recipe
+                    <i class="material-icons right">send</i>
+                </button>
+            </div>
+        </div>
+    </div>
+    </form>
+</div>
+
+{% endblock %}
