--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -2,7 +2,7 @@
 <div class="new_recipe">
     <h3>add recipe</h3>
     <div class="row">
-        <form action="" method="POST" class="col s12">
+        <form action="" method="POST" enctype='multipart/form-data' class="col s12">
             <div class="input-field col s12 m6">
                 <select id="category" name="category_name" class="icons ">
                     <option value="" disabled selected>Choose your Category</option>
@@ -75,11 +75,11 @@
                 </div>
                 <div id="adding-ingredients" class="row">
                     <div class="input-field col s2 ">
-                        <input placeholder="1" id="amount" name="amount" type="text">
+                        <input placeholder="1" id="amount" name="amount" type="text" onfocus="this.value=''">
                         <label for="amount">Amount</label>
                     </div>
                     <div class="input-field col s3">
-                        <select id='measurement'>
+                        <select id='measurement' onfocus="this.value=''">
                             <option value="" disabled selected></option>
                             <option>cup/s</option>
                             <option>g</option>
@@ -92,7 +92,8 @@
                         <label>Measurement</label>
                     </div>
                     <div class="input-field col s6 ">
-                        <input placeholder="Ingredient" id="ingredient" name="ingredient" type="text">
+                        <input placeholder="Ingredient" id="ingredient" name="ingredient" type="text"
+                            onfocus="this.value=''">
                         <label for="ingredient">Ingredient</label>
                     </div>
 
@@ -118,7 +119,8 @@
         </div>
         <div class="row" id="add-method">
             <div class="input-field col s10 ">
-                <input placeholder="Method" id="method" name="method" type="text" class="validate ">
+                <input placeholder="Method" id="method" name="method" type="text" class="validate "
+                    onfocus="this.value=''">
                 <label for="method"></label>
             </div>
             <div>
@@ -128,10 +130,13 @@
         </div>
         <br>
         <br>
-        <div>
-            <a class="waves-effect waves-light btn-small"><i class="material-icons left">add_a_photo</i>Upload
-                an image</a>
+        <div style="height:0px;overflow:hidden">
+            <input type="file" id="fileInput" name="fileInput" />
         </div>
+        <a id='pic-upload' class="waves-effect waves-light btn-small"><i
+                class="material-icons left">add_a_photo</i>Upload
+            an image</a>
+
         <br>
         <br>
         <div>
