--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -159,6 +159,10 @@
         <div class="row">
             <h3>review recipe:</h3>
         </div>
+        <div>
+            <a id="refresh" class="btn-floating btn-large waves-effect waves-light red"><i
+                    class="material-icons">refresh</i></a>
+        </div>
         <div class="container" id="recipe-info">
             <h4><strong><u id="display-r-n"></u></strong></h4>
             <div class="row">
@@ -235,6 +239,7 @@
             </div>
         </div>
         <br>
+
         <br>
         <div>
             <button class="btn waves-effect waves-light" type="submit" name="action">Submit Recipe
