--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -213,7 +213,6 @@
                 <div class="row">
                     <div class="col s10 m3">
                         <img src="" id="display-img" name="display-img" class="" height="150px" width="150px">
-                        
                     </div>
                     <div class="col s2">
                         <a id="edit-image" class="btn-floating btn-small red">
@@ -247,7 +246,7 @@
             <br>
             <br>
             <div>
-                <button class="btn waves-effect waves-light" type="submit" name="action">Submit Recipe
+                <button id='submitBtn' class="btn waves-effect waves-light" type="submit" name="action">Submit Recipe
                     <i class="material-icons right">send</i>
                 </button>
             </div>
