--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,14 @@
 {% extends 'base.html'%} {% block content %}
 <div class="row">
     <h3> Categories</h3>
-
 <div class="row">
  {% for category in categories %}
     <div class="col s12 m6 l4">
       <div class="card">
         <div class="card-image">
-          <img src="images/sample-1.jpg" width="300px" height="300px">
+          <img src="{{category.image}}" width="300px" height="300px">
           <span class="card-title"></strong></span>
-          <a href="{{url_for('recipes', category_id=category._id)}}" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+          <a href="" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
         </div>
         <div class="card-content">
           <p><strong>{{category.category_name}}</strong></p>
@@ -19,5 +18,6 @@
     {% endfor %}   
   </div>
      
+
 </div>
 {% endblock %}
