created link for recipes- not pulling information

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -2,7 +2,7 @@
 
 
 <div class="row">
-{% for category in categories %}
+{% for name in categories %}
     <h3><strong>{{categories.category_name}}</strong></h3>
 {% endfor %}
 <div class="row">
