--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -250,5 +250,6 @@
 </div>
 </form>
 </div>
-
+ <script src="{{url_for('static', filename='js/main.js')}}" type='text/javascript'>
+    </script>
 {% endblock %}
