fix add default img and update ingredients array

--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -140,7 +140,7 @@
         <div style="height:0px;overflow:hidden">
             <input type="file" id="fileInput" />
         </div>
-        <img src="" id="preview" width="150px" height="150px">
+        <img src="https://res.cloudinary.com/dgsqmdssi/image/upload/v1579434006/ccRecipes/JicJac-Oven_z15gmf.svg" id="preview" width="150px" height="150px">
         <br>
         <a id='pic-upload' class="waves-effect waves-light btn-small"><i
                 class="material-icons left">add_a_photo</i>Upload
@@ -250,6 +250,6 @@
 </div>
 </form>
 </div>
- <script src="{{url_for('static', filename='js/main.js')}}" type='text/javascript'>
+ <script src="{{url_for('static', filename='js/add.js')}}" type='text/javascript'>
     </script>
 {% endblock %}
