--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -253,6 +253,7 @@
         </div>
     </div>
 </form>
-
+<script src="{{url_for('static', filename='js/add.js')}}" type='text/javascript'>
+    </script>
 
 {% endblock %}
