--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -7,9 +7,9 @@
 
             <div class="input-field col s12 m6">
                 <select id="category" name="category_name" class="icons ">
-                    <option value="" disabled selected>Choose your Category</option>
+                    <option  disabled selected>Choose your Category</option>
                     {% for cat in categories %}
-                    <option value="" data-icon="{{cat.image}}" class="left">{{cat.category_name}}</option>
+                    <option  data-icon="{{cat.image}}" class="left">{{cat.category_name}}</option>
                     {% endfor %}
                 </select>
                 <label></label>
@@ -212,7 +212,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col s10 m3">
-                        <img src="" id="display-img" name="display-img" class="" height="150px" width="150px">
+                        <img src="https://res.cloudinary.com/dgsqmdssi/image/upload/v1579434006/ccRecipes/JicJac-Oven_z15gmf.svg" id="display-img" name="display-img" class="" height="150px" width="150px">
                     </div>
                     <div class="col s2">
                         <a id="edit-image" class="btn-floating btn-small red">
