update to add more options to measurement

--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -92,8 +92,12 @@
                         <option value="" disabled selected></option>
                         <option>cup/s</option>
                         <option>g</option>
+                        <option>lrg</option>
+                        <option>lbs</option>
+                        <option>med</option>
                         <option>ml</option>
                         <option>oz</option>
+                        <option>sml</option>
                         <option>tbsp</option>
                         <option>tsp</option>
                         <option></option>
