--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,37 +1,25 @@
 {% extends 'base.html'%} {% block content %}
 
-
 <div class="row">
-
-    <h3><strong>Category name</strong></h3>
-<div class="row">
-{% for recipe in recipes %}
-    <div class="col s12 m6 l4">
+<h3>{{category.category_name}}</h3>
+</div>
+  <div class="row">
+  {% for group in recipes|groupby('category_name') %}
+  {% for recipe in group.list %}
+    <div class="col s12 m6">
       <div class="card">
         <div class="card-image">
-          <img src="images/sample-1.jpg" width="300px" height="300px">
-          <span class="card-title">recipe name</strong></span>
-          <a href="" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+          <img src="{{recipe.image}}" max-width="250px" height="200px">
+          <span class="card-title">{{recipe.recipe_name}}</span>
+          <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
         </div>
         <div class="card-content">
-          <p></p>
+          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
         </div>
       </div>
-    </div>
-   {% endfor%}
-  </div>
-       <!-- Modal Trigger -->
-  <button data-target="modal1" class="btn modal-trigger">Modal</button>
-    <!-- Modal Structure -->
-  <div id="modal1" class="modal">
-    <div class="modal-content">
-      <h4>Modal Header</h4>
-      <p>A bunch of text</p>
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+      {% endfor %}
+      {% endfor %}
     </div>
   </div>
-          
-</div>
+
 {% endblock %}
