--- a/templates/home.html
+++ b/templates/home.html
@@ -6,9 +6,9 @@
     <div class="col s12 m6 l4">
       <div class="card">
         <div class="card-image">
-          <img src="{{category.image}}" width="250px" height="200px">
+          <img src="{{category.image}}" width="250px" height="250px">
           <span class="card-title"></strong></span>
-          <a href="{{url_for('get_recipes', category_id=category._id)}}" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+          <a href="{{url_for('get_recipes', category_name=category['category_name'])}}" class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
         </div>
         <div class="card-content">
           <p><strong>{{category.category_name}}</strong></p>
