--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,24 +1,24 @@
 {% extends 'base.html'%} {% block content %}
 
 <div class="row">
-<h3>{{category.category_name}}</h3>
+<h3>{{recipes.category_name}}</h3>
 </div>
   <div class="row">
-  {% for group in recipes|groupby('category_name') %}
-  {% for recipe in group.list %}
+
+  {% for recipe in recipes %}
     <div class="col s12 m6">
       <div class="card">
         <div class="card-image">
-          <img src="{{recipe.image}}" max-width="250px" height="200px">
-          <span class="card-title">{{recipe.recipe_name}}</span>
+         <img src="{{url_for('file', filename=recipe['image'])}}" width="250px" height="250x" >
+          <span class="card-title"></span>
           <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
         </div>
         <div class="card-content">
-          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          <p>{{recipe.recipe_name}}- {{recipe.category_name}}</p>
         </div>
       </div>
       {% endfor %}
-      {% endfor %}
+      
     </div>
   </div>
 
